# inspektor

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.controlplane  README.md  build.rs  build_controlplane_docker.sh  build_dataplane_docker.sh  cert.der  cert.pem  gen_cert.sh  identity.p12  key.pem  package-lock.json  root-ca.der  root-ca.key.pem  root-ca.pem  root-ca.srl  server.key.pem
.github/workflows/: cargo.yml  rust.yml
controlplane/: go.mod  go.sum  inspektor  main.go  package-lock.json
controlplane/apiproto/: api.pb.go  api_grpc.pb.go
controlplane/cmd/: inspektor.go
controlplane/config/: config.go
controlplane/dashboard/: package-lock.json  package.json
controlplane/handlers/: datasource.go  general.go  session.go  user.go
controlplane/idp/: github.go  ldp.go
controlplane/metrics/: metrics.go  metrics_test.go
controlplane/models/: data_source.go  kv.go  models.go  role.go  session.go  user.go
controlplane/openconnect/: github.go  openconnect.go
controlplane/policy/: build.go  build_test.go  git.go
controlplane/rpcserver/: server.go
controlplane/slackbot/: slack.go  views.go
controlplane/store/: store.go
controlplane/teamsbot/: bot.go
controlplane/types/: error.go  types.go
controlplane/utils/: utils.go
dashboard/: .eslintrc.js  package-lock.json  package.json
dashboard/src/: App.vue  main.js
dev/: config.yaml  docker-compose-demo.yaml  docker-compose.yaml
docs/: docusaurus.config.js  package-lock.json  package.json
docs/blog/: evaluating-open-policy-agent-polices-rust-using-wasm.md  how-profiler-works.md  i-made-minimal-change-to-escape-html-in-rest-api-using-go-reflection.md  kubernetes-breach.md  raw-indentifier.md  sasl-authentication.md  unchecked-unwrap.md  why-you-should-use-postgres.md
docs/docs/: contribute.md  deployment.md  design.md  features.md  install.md  intro.md  policy.md  resource.md  resources.md
docs/static/: leedfeed.js
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
opa/: Cargo.toml  README.md  policy.wasm
opa/src/: lib.rs  opa.rs  policy.wasm  policy.wat
proto/: api.proto  api_grpc.rs  go_gen.sh
src/: main.rs
src/apiproto/: api.rs  api_grpc.rs  mod.rs
src/auditlog/: cloudwatch.rs  mod.rs  stdout.rs
src/bytespool/: mod.rs
src/config/: mod.rs  test_config.yaml
src/mysql_driver/: driver.rs  message.rs  mod.rs
src/policy_evaluator/: evaluator.rs  mod.rs  policy.wasm
src/postgres_driver/: codec.rs  conn.rs  driver.rs  errors.rs  message.rs  mod.rs  (+2 more)
systest/: .gitignore  bootstarp_cluster.sh  controlplane_config.yaml  data.csv  dataplane_config.yaml  docker-compose.yml  go.mod  go.sum  main_test.go  seed.sql  test.sh
(+47 files in other folders)
