[package]
name = "inspektor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
byteorder = "1.4.3"
bytes = "1.1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8.4"
tokio-openssl = "0.6.3"
openssl = "0.10.38"
clap = "2.33.3"
md-5 = "0.9"
grpcio = { version = "0.6", features = ["prost-codec", "openssl"] }
protobuf = { version = "2", features = ["with-bytes"] }
futures = "0.3"
burrego = {git = "https://github.com/kubewarden/policy-evaluator"}
serde_json = "1.0.71"
sqlparser = {git = "https://github.com/poonai/sqlparser-rs", branch = "poonai/pgsetstatement"}
tokio-postgres-openssl = "0.1.0-rc.1"
tokio-postgres = "0.7.5"
serde = "1.0.131"
postgres-protocol = "0.6.3"
[build-dependencies]
protoc-grpcio = "3.0.0"